    (Naganarasimha G R via ozawa)

    MAPREDUCE-6225. Fix new findbug warnings in hadoop-mapreduce-client-core. 
    (Varun Saxena via junping_du)

    MAPREDUCE-6264. Remove httpclient dependency from hadoop-mapreduce-client.
    (Brahma Reddy Battula via aajisaka)

    MAPREDUCE-5612. Add javadoc for TaskCompletionEvent.Status.
    (Chris Palmer via aajisaka)

  OPTIMIZATIONS

    MAPREDUCE-6169. MergeQueue should release reference to the current item 
    from key and value at the end of the iteration to save memory. 
    (Zhihai Xu via kasha)

    MAPREDUCE-6059. Speed up history server startup time (Siqi Li via aw)

  BUG FIXES

    MAPREDUCE-6210. Use getApplicationAttemptId() instead of getApplicationId()
    for logging AttemptId in RMContainerAllocator.java (Leitao Guo via aajisaka)

    MAPREDUCE-6177. Minor typo in the EncryptedShuffle document about
    ssl-client.xml (Yangping Wu via harsh)

    MAPREDUCE-5918. LineRecordReader can return the same decompressor to
    CodecPool multiple times (Sergey Murylev via raviprak)

    MAPREDUCE-6162. mapred hsadmin fails on a secure cluster (jlowe)

    MAPREDUCE-6049. AM JVM does not exit if MRClientService graceful shutdown
    fails (Rohith via devaraj)

    MAPREDUCE-5568. Fixed CompletedJob in JHS to show progress percentage
    correctly in case the number of mappers or reducers is zero. (MinJi Kim via
    jianhe)
 
    MAPREDUCE-6172. TestDbClasses timeouts are too aggressive (Varun Saxena
    via jlowe)

    MAPREDUCE-6160. Potential NullPointerException in MRClientProtocol
    interface implementation. (Rohith via jlowe)

    MAPREDUCE-4879. TeraOutputFormat may overwrite an existing output
    directory. (gera)

    MAPREDUCE-6166. Reducers do not validate checksum of map outputs when
    fetching directly to disk. (Eric Payne via gera)

    MAPREDUCE-6045. need close the DataInputStream after open it in
    TestMapReduce.java (zxu via rkanter)
